# AI-Powered-Healthcare-Assistant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  azure_deploy.py  azure_deployment.py  config.py  data_loader.py  data_preprocessing.py  deploy-to-azure.bat  deploy-vercel.md  deploy.sh  env.example  ml_models.py  package.json  pyproject.toml  requirements-azure.txt  requirements-dev.txt  requirements-vercel.txt  requirements.txt  run_app.py  setup-github.py  setup.py  start_healthcare_app.bat  start_healthcare_app.sh  startup.py  streamlit_app.py  streamlit_config.toml  test_api.py  test_uci_integration.py  train_models.py  vercel.json
.github/workflows/: ci.yml
api/: index.py  simple.py
azure_functions/: function_app.py  requirements.txt
docs/: api-reference.md  deployment.md  installation.md
examples/: advanced_usage.py  basic_usage.py
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Dashboard.js  Navigation.js  PredictionForm.js  Results.js
models/: diabetes_model.pkl  diabetes_scaler.pkl  eye_disease_model.pkl  eye_disease_scaler.pkl  feature_columns.pkl  heart_disease_model.pkl  heart_disease_scaler.pkl
static/: index.html
tests/: __init__.py  test_app.py  test_data_preprocessing.py  test_ml_models.py
